Fix dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,14 +44,12 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: #202023;
-  }
+html {
+  color-scheme: dark;
+}
+body {
+  color: white;
+  background: #202023;
 }
 
 /* LOADER */
